css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/* General Styles */

html {
    font-size: 16px;
}

body {
    font-size: 1em;
    font-family: "Open Sans", sans-serif;
        color: #e2e3ed;
    text-align: left;
}

ul,
ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a {
    color: #e2e3ed;
    text-decoration: none;
}

h2 {
    font-family: "Poppins", sans-serif;
    font-weight: 500;
    font-size: 1.875em;
    margin: 0;

}

h3, h4 {
    font-family: "Poppins", sans-serif;
    font-weight: 500;
    font-size: 1.125em;
    margin: 20px 0;
}

p {
    font-size: 0.875em;
    line-height: 1.285;
}

img {
    width: 100%;
}

figure {
    margin: 0;
}

address {
    font-style: normal;
}

   .content-wrapper {
       width: 90%;
       margin: 50px 0;
   }

/*-----------Base Header - Footer Styles ------------*/
header,
footer {
    background-color: #202322;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

header {
    padding: 15px 0;
}

header .content-wrapper {
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

header figure {
    width: 60%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

.header-divider {
    background-color: #3a3a3a;
    height: 1px;
    width: 100%;
    margin: 10px 0 20px 0;
}

header nav {
    width: 60%;
    font-size: 1.125em;
    font-weight: 700;
    text-transform: uppercase;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-flow: row wrap;
}

header nav ul {
    width: 100%;
    display: flex;
    justify-content: space-around;
}

header nav ul li {
    font-size: 1.125em;
}

footer {
    text-align: center;
    flex-direction: column;
}

footer p {
    margin: 0;
}

footer .content-wrapper {
    width: 55%;
    margin: 50px 0;
}

footer .contact {
    margin-bottom: 50px;
}

footer .social-icons {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

footer .social-icons p {
    background-color:#527158;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
}

footer .social-icons p i {
    font-size: 1.3125em;
}

footer .copyright {
    margin: 20px 0;
}

/* -------- Mobile Styles - Homepage ------ */

/* Hero Area */

.hero-area {
    background: url(../img/hero-image.jpg);
    background-size: cover;
    background-position: center;
    min-height: 500px;
    display: flex;
    justify-content: center;
    flex-flow: row wrap;
}

.hero-area h1 {
    font-size: 2.25em;
    font-family: "Poppins", Helvetica, Arial, sans-serif;
    font-weight: 500;
    line-height: 1.2;
}

/* Aside */

aside {
    background-color: #527158;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

aside .form {
    margin-top: 30px;
}

input[type=text] {
    box-sizing: border-box;
    width: 100%;
    color: #2a423a;
    font-style: italic;
    padding: 1em;
}

input[type=button] {
    width: 100%;
    padding: 20px 0;
    margin-top: 20px;
    background-color: #2a423a;
    font-family: "Poppins", Helvetica, Arial, sans-serif;
    font-weight: 500;
    font-size: 1.125em;
    color: #e2e3ed;
    border: none;
    text-align: center;
    text-transform: uppercase;
}

/* Features */

.features {
    background: url("../img/features-image.jpg");
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    flex-flow: row wrap;
}

.features h2 {
    margin-bottom: 60px;
}

.features article {
    width: 63%;
    margin: 30px 0;
}

.features .features-items {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

.features i {
    font-size: 3.75em;
    margin-bottom: 40px;
}

.features p {
    text-align: center;
    margin: 0;
}

/* Reviews */

.reviews {
    background-color: #2a423a;
    display: flex;
    justify-content: center;
    flex-flow: row wrap;
}

.reviews h2 {
    margin-bottom: 40px;
    line-height: 1;
}

.reviews h3 {
    width: 55%;
    margin: 20px 0;
}
/* ... */

